k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql 
  namespace: expense 
spec:
  selector:
    matchLabels:
      name: mysql
  template:
    metadata:
      name: mysql
      labels:
        app: mysql/DB
    spec:
      containers:
      - name: mysql
        image: harika402/mysql:v1
        # env:
        # - name: MYSQL_ROOT_PASSWORD
        #   valueFrom:
        #     secretKeyRef:
        #       name: mysql-secret
        #       key: root-password
        # - name: MYSQL_DATABASE
        #   value: appdb
        # - name: MYSQL_USER
        #   value: appuser
        # - name: MYSQL_PASSWORD
        #   valueFrom:
        #     secretKeyRef:
        #       name: mysql-secret
        #       key: user-password
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: mysql-pvc
